# Business-Intelligence-Agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  OPERATIONS.md  README.md  SECURITY.md  UPSTREAM.md  pyproject.toml  user-profile.example.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  release.yml
business_intelligence_agent/: __init__.py  cli.py  compiler.py  detect.py  doctor.py  env.py  files.py  profile.py  runtime.py  scheduler.py
config/: config.yaml  frequency_words.txt
config/custom/ai/: 01-value-scoring.txt  02-factual-brief.txt  03-daily-overview.txt
docs/: product-contract.yaml
schemas/: user-profile.schema.json
scripts/: bootstrap.ps1  bootstrap.sh  score_commercial_intelligence.py
tests/: test_detect.py  test_files_env.py  test_full_pipeline.py  test_profile.py  test_report_delivery.py  test_runtime.py  test_scheduler.py
trendradar/: __main__.py
trendradar/ai/: analyzer.py  formatter.py
trendradar/core/: frequency.py
trendradar/notification/: dispatcher.py  senders.py  splitter.py
