[project]
name = "business-intelligence-agent"
version = "1.0.0"
description = "Agent-installable business intelligence collection and Obsidian delivery"
requires-python = ">=3.12"
dependencies = [
    "requests==2.33.0",
    "pytz==2026.1",
    "PyYAML==6.0.3",
    "websockets==13.1",
    "feedparser==6.0.12",
    "boto3==1.42.76",
    "litellm==1.92.0",
    "json-repair==0.58.6",
    "tenacity==8.5.0",
]

[project.scripts]
trendradar = "trendradar.__main__:main"
bia = "business_intelligence_agent.cli:main"

[dependency-groups]
dev = [
    "pytest==8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["business_intelligence_agent", "trendradar"]
